
syntax = "proto3";

option go_package = "/pb";

package pb;

// Ticketing service definition
service Ticketing {
  
  // Public API where you can submit a purchase for a ticket
  rpc Purchase (PurchaseRequest) returns (PurchaseResponse) {}

  // Authenticated API that shows the details of the receipt for the user
  rpc ViewReservation (ViewReservationRequest) returns (ViewReservationResponse) {}

  // authenticated API that lets an admin view all the users and seats they are allocated by the requested section
  rpc ViewAllReservations (ViewAllReservationsRequest) returns (ViewAllReservationsResponse) {}

  // authenticated API to allow an admin or the user to remove the user from the train
  rpc CancelReservation (CancelReservationRequest) returns (CancelReservationResponse) {}

  rpc ChangeSeat (ChangeSeatRequest) returns (ChangeSeatResponse) {}
}

// User info
message User {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}

// Seating sections
enum Section {
  A = 0;
  B = 1;
}

// Seat info
message Seat {
  Section section = 1;
  int32 number = 2;
}

// Purchase request message
message PurchaseRequest {
  User user = 1;
}

message Receipt {
  string from = 1;
  string to = 2;
  User user = 3;
  float price = 4;
  Seat seat = 5;
}

// Purchase Response message
message PurchaseResponse {
  Receipt receipt = 1;
}

// View Reservation Request message
message ViewReservationRequest {
  string User = 1;
}

// View Reservation Response message
message ViewReservationResponse {
  string Seat = 1;
  float price = 2; 
}

// View All Reservations Request message
message ViewAllReservationsRequest {
  string Section = 1;
}

// View All Reservations Response message
message ViewAllReservationsResponse {
  repeated Seat Seat = 1;
  repeated User User = 2;
}

// Cancel Reservation Request message
message CancelReservationRequest {
  string User = 1;
}

// Cancel Reservation Response message
message CancelReservationResponse {
}

// Change Seat Request message
message ChangeSeatRequest {
  string User = 1;
  string Seat = 2; //new seat
}

// Change Seat Response message
message ChangeSeatResponse {
}



